export const snapshot = {};

snapshot[`DependencyUpdate > collect() > multiple imports 1`] = `
{
  code: {
    span: {
      end: {
        character: 71,
        line: 0,
      },
      start: {
        character: 23,
        line: 0,
      },
    },
    specifier: "https://deno.land/std@0.200.0/assert/assert.ts",
  },
  from: {
    name: "deno.land/std",
    path: "/assert/assert.ts",
    scheme: "https://",
    version: "0.200.0",
  },
  to: {
    name: "deno.land/std",
    path: "/assert/assert.ts",
    scheme: "https://",
    version: "123.456.789",
  },
}
`;

snapshot[`DependencyUpdate > collect() > multiple imports 2`] = `
{
  code: {
    span: {
      end: {
        character: 74,
        line: 1,
      },
      start: {
        character: 28,
        line: 1,
      },
    },
    specifier: "https://deno.land/x/deno_graph@0.50.0/mod.ts",
  },
  from: {
    name: "deno.land/x/deno_graph",
    path: "/mod.ts",
    scheme: "https://",
    version: "0.50.0",
  },
  to: {
    name: "deno.land/x/deno_graph",
    path: "/mod.ts",
    scheme: "https://",
    version: "123.456.789",
  },
}
`;

snapshot[`DependencyUpdate > collect() > multiple imports 3`] = `
{
  code: {
    span: {
      end: {
        character: 40,
        line: 2,
      },
      start: {
        character: 18,
        line: 2,
      },
    },
    specifier: "npm:node-emoji@2.0.0",
  },
  from: {
    name: "node-emoji",
    path: "",
    scheme: "npm:",
    version: "2.0.0",
  },
  to: {
    name: "node-emoji",
    path: "",
    scheme: "npm:",
    version: "123.456.789",
  },
}
`;

snapshot[`DependencyUpdate > collect() > import map 1`] = `
{
  code: {
    span: {
      end: {
        character: 38,
        line: 0,
      },
      start: {
        character: 23,
        line: 0,
      },
    },
    specifier: "std/assert.ts",
  },
  from: {
    name: "deno.land/std",
    path: "/",
    scheme: "https://",
    version: "0.200.0",
  },
  to: {
    name: "deno.land/std",
    path: "/",
    scheme: "https://",
    version: "123.456.789",
  },
}
`;

snapshot[`DependencyUpdate > collect() > import map 2`] = `
{
  code: {
    span: {
      end: {
        character: 40,
        line: 1,
      },
      start: {
        character: 28,
        line: 1,
      },
    },
    specifier: "deno_graph",
  },
  from: {
    name: "deno.land/x/deno_graph",
    path: "/mod.ts",
    scheme: "https://",
    version: "0.50.0",
  },
  to: {
    name: "deno.land/x/deno_graph",
    path: "/mod.ts",
    scheme: "https://",
    version: "123.456.789",
  },
}
`;

snapshot[`DependencyUpdate > collect() > import map 3`] = `
{
  code: {
    span: {
      end: {
        character: 36,
        line: 2,
      },
      start: {
        character: 24,
        line: 2,
      },
    },
    specifier: "node-emoji",
  },
  from: {
    name: "node-emoji",
    path: "",
    scheme: "npm:",
    version: "1.0.0",
  },
  to: {
    name: "node-emoji",
    path: "",
    scheme: "npm:",
    version: "123.456.789",
  },
}
`;

snapshot[`DependencyUpdate > collect() > export 1`] = `
{
  code: {
    span: {
      end: {
        character: 71,
        line: 0,
      },
      start: {
        character: 23,
        line: 0,
      },
    },
    specifier: "https://deno.land/std@0.200.0/assert/assert.ts",
  },
  from: {
    name: "deno.land/std",
    path: "/assert/assert.ts",
    scheme: "https://",
    version: "0.200.0",
  },
  to: {
    name: "deno.land/std",
    path: "/assert/assert.ts",
    scheme: "https://",
    version: "123.456.789",
  },
}
`;

snapshot[`DependencyUpdate > collect() > import and export 1`] = `
{
  code: {
    span: {
      end: {
        character: 71,
        line: 0,
      },
      start: {
        character: 23,
        line: 0,
      },
    },
    specifier: "https://deno.land/std@0.200.0/assert/assert.ts",
  },
  from: {
    name: "deno.land/std",
    path: "/assert/assert.ts",
    scheme: "https://",
    version: "0.200.0",
  },
  to: {
    name: "deno.land/std",
    path: "/assert/assert.ts",
    scheme: "https://",
    version: "123.456.789",
  },
}
`;

snapshot[`DependencyUpdate > collect() > import and export 2`] = `
{
  code: {
    span: {
      end: {
        character: 74,
        line: 1,
      },
      start: {
        character: 28,
        line: 1,
      },
    },
    specifier: "https://deno.land/x/deno_graph@0.50.0/mod.ts",
  },
  from: {
    name: "deno.land/x/deno_graph",
    path: "/mod.ts",
    scheme: "https://",
    version: "0.50.0",
  },
  to: {
    name: "deno.land/x/deno_graph",
    path: "/mod.ts",
    scheme: "https://",
    version: "123.456.789",
  },
}
`;

snapshot[`DependencyUpdate > collect() > updated and outdated 1`] = `
{
  code: {
    span: {
      end: {
        character: 84,
        line: 1,
      },
      start: {
        character: 29,
        line: 1,
      },
    },
    specifier: "https://deno.land/std@0.200.0/assert/assert_equals.ts",
  },
  from: {
    name: "deno.land/std",
    path: "/assert/assert_equals.ts",
    scheme: "https://",
    version: "0.200.0",
  },
  to: {
    name: "deno.land/std",
    path: "/assert/assert_equals.ts",
    scheme: "https://",
    version: "123.456.789",
  },
}
`;

snapshot[`DependencyUpdate > collect() > updated import and outdated export 1`] = `
{
  code: {
    span: {
      end: {
        character: 84,
        line: 1,
      },
      start: {
        character: 29,
        line: 1,
      },
    },
    specifier: "https://deno.land/std@0.200.0/assert/assert_equals.ts",
  },
  from: {
    name: "deno.land/std",
    path: "/assert/assert_equals.ts",
    scheme: "https://",
    version: "0.200.0",
  },
  to: {
    name: "deno.land/std",
    path: "/assert/assert_equals.ts",
    scheme: "https://",
    version: "123.456.789",
  },
}
`;

snapshot[`DependencyUpdate > collect() > ignore a dependency 1`] = `
{
  code: {
    span: {
      end: {
        character: 71,
        line: 0,
      },
      start: {
        character: 23,
        line: 0,
      },
    },
    specifier: "https://deno.land/std@0.200.0/assert/assert.ts",
  },
  from: {
    name: "deno.land/std",
    path: "/assert/assert.ts",
    scheme: "https://",
    version: "0.200.0",
  },
  to: {
    name: "deno.land/std",
    path: "/assert/assert.ts",
    scheme: "https://",
    version: "123.456.789",
  },
}
`;

snapshot[`DependencyUpdate > collect() > ignore a dependency 2`] = `
{
  code: {
    span: {
      end: {
        character: 74,
        line: 1,
      },
      start: {
        character: 28,
        line: 1,
      },
    },
    specifier: "https://deno.land/x/deno_graph@0.50.0/mod.ts",
  },
  from: {
    name: "deno.land/x/deno_graph",
    path: "/mod.ts",
    scheme: "https://",
    version: "0.50.0",
  },
  to: {
    name: "deno.land/x/deno_graph",
    path: "/mod.ts",
    scheme: "https://",
    version: "123.456.789",
  },
}
`;

snapshot[`DependencyUpdate > collect() > only update a specified dependency 1`] = `
{
  code: {
    span: {
      end: {
        character: 74,
        line: 1,
      },
      start: {
        character: 28,
        line: 1,
      },
    },
    specifier: "https://deno.land/x/deno_graph@0.50.0/mod.ts",
  },
  from: {
    name: "deno.land/x/deno_graph",
    path: "/mod.ts",
    scheme: "https://",
    version: "0.50.0",
  },
  to: {
    name: "deno.land/x/deno_graph",
    path: "/mod.ts",
    scheme: "https://",
    version: "123.456.789",
  },
}
`;
